[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/tubes/PipeStyle1.png" type="Texture" id=1]
[ext_resource path="res://assets/tubes/Tubes.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 68.5 )

[node name="Tubes" type="Node2D"]
script = ExtResource( 2 )

[node name="BottomTube" type="Node2D" parent="."]
position = Vector2( 0, 77 )

[node name="BottomTubeTop" type="Sprite" parent="BottomTube"]
position = Vector2( 0, -10 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 20 )

[node name="BottomTubeBody" type="Sprite" parent="BottomTube"]
scale = Vector2( 1, 4.05 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -16, 0 )
region_enabled = true
region_rect = Rect2( 0, 20, 32, 40 )

[node name="TopTubeArea" type="Area2D" parent="BottomTube"]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BottomTube/TopTubeArea"]
polygon = PoolVector2Array( -16, -20, 16, -20, 16, -5, 14, -3, 14, 166, -14, 166, -14, -3, -16, -5 )

[node name="TopTube" type="Node2D" parent="."]
position = Vector2( 0, -80 )

[node name="TopTubeTop" type="Sprite" parent="TopTube"]
texture = ExtResource( 1 )
flip_v = true
region_enabled = true
region_rect = Rect2( 0, 0, 32, 20 )

[node name="TopTubeBody" type="Sprite" parent="TopTube"]
position = Vector2( 0, -166 )
scale = Vector2( 1, 3.9 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -16, 0 )
region_enabled = true
region_rect = Rect2( 0, 20, 32, 40 )

[node name="TopTubeArea" type="Area2D" parent="TopTube"]
collision_layer = 2

[node name="TopTubePolygon" type="CollisionPolygon2D" parent="TopTube/TopTubeArea"]
position = Vector2( 0, 1 )
polygon = PoolVector2Array( -16, 10, 16, 10, 16, -6, 14, -10, 14, -180, -14, -180, -14, -10, -16, -6 )

[node name="CountArea" type="Area2D" parent="."]
collision_layer = 4
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CountArea"]
position = Vector2( 0, -6.5 )
shape = SubResource( 1 )

[connection signal="area_entered" from="CountArea" to="." method="_on_count_area_entered"]
